<resources>
    <string name="app_name">文件管理器</string>
    <string name="nav_sub_item_more">更多</string>
    <string name="nav_menu_settings">设置</string>
    <string name="nav_menu_feedback">反馈</string>
    <string name="nav_menu_about">关于</string>
    <string name="nav_menu_photo">图片</string>
    <string name="nav_menu_music">音乐</string>
    <string name="nav_menu_video">视频</string>
    <string name="nav_menu_device">设备</string>
    <string name="config_show_hidden_file">是否显示隐藏文件</string>
    <string name="toast_one_more_press_to_exit">再按一次退出</string>
</resources>
